# storage/api-docs/api-docs.json
@@ -316,9 +316,9 @@
                         }
                     },
                     {
-                        "name": "filters[mentee_id]",
+                        "name": "filters[role]",
                         "in": "query",
-                        "description": "Filter by mentee_id",
+                        "description": "Filter by role",
                         "required": false,
                         "schema": {
                             "type": "string"
